# SegRAG

./: .gitignore  LICENSE  README.md  conda.yaml  environment.yml  pyproject.toml  requirements.txt
GitHub/: Stage0_prepare_pascal5i_annotations.py  Stage0_run_pipeline.py  Stage1_build_and_filter_feature_bank.py  Stage1_build_and_filter_feature_bank_v2.py  Stage1_build_and_filter_feature_bank_v3.py  Stage1_filter_scored_feature_bank.py  Stage1_score_feature_bank.py  Stage2_cache_feature_matching.py  Stage3_evaluate_feature_matching.py  Stage4_evaluate_sam3.py  Stage5_evaluate_merged_sam3_masks.py  __init__.py  build_feature_bank_utils.py  cache_feature_matching.py  common.py  export_query_protocol.py  export_reference_images.py  export_support_protocol.py  feature_matching_backends.py  fill_filtered_supports_to_shot.py  generate_support_shots.py  intra_class_filter_impl.py  main_pipeline.py  main_pipeline_adapters.py  main_pipeline_ade20k.py  merge_masks_impl.py  metrics.py  non_sam_eval_impl.py  prompt_cache.py  resume.py  sam3_points_only_impl.py  sam3_text_and_points_impl.py  test_feature_scoring_equivalence.py
configs/: ade20k.yaml  cityscapes.yaml  default.yaml  lvis.yaml  pc59.yaml
docs/: reviewer_response_agml_split.md
examples/: custom_coco_dataset.md  quickstart_pc59.md
scripts/: evaluate_sam3.py  generate_support_shots.py  prepare_pascal5i.py  run_adapters.py  run_ade20k.py  run_pipeline.py
splits/agml/: README.md  agml_30shot_support_manifest.json  agml_class_summary.csv  agml_query_manifest.json
tests/: test_feature_scoring_equivalence.py
(+41 files in other folders)
